grocy/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grocy
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grocy
  template:
    metadata:
      labels:
        app: grocy
    spec:
      containers:
      - env:
        - name: PUID
          value: "1000"
        - name: PGID
          value: "1000"
        - name: TZ
          value: America/Detroit
        image: linuxserver/grocy
        name: grocy
        ports:
        - containerPort: 80
          name: grocy
          protocol: TCP
        resources:
          limits:
            cpu: 100m
            memory: 512Mi
        volumeMounts:
        - mountPath: /config
          name: data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: grocy-data
